fix Title overflow behaviour

--- a/browser/styles/main/HomeContainer/components/ArticleList.styl
+++ b/browser/styles/main/HomeContainer/components/ArticleList.styl
@@ -32,17 +32,20 @@ articleItemColor = #777
           float right
           line-height 20px
       .middle
-        clearfix()
         padding 3px 0 7px
         font-size 16px
+        position relative
+        height 26px
         .mode
-          float left
+          position absolute
+          left 0
           font-size 12px
           line-height 16px
         .title
-          float left
+          position absolute
+          left 19px
+          right 0
           overflow ellipsis
-          padding 0 5px
       .bottom
         padding 5px 0
         overflow-x auto
